# server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  client.py  main.cpp
src/: httpMessage.h  httpRequest.cpp  httpRequest.h  parser.cpp  parser.h  server.cpp  server.h
src/utils/: logging.cpp  logging.h  sigHandler.cpp  sigHandler.h
